[gd_scene load_steps=28 format=2]

[ext_resource path="res://SISTEMA/ENTES/Ente.tscn" type="PackedScene" id=1]
[ext_resource path="res://SISTEMA/ENTES/Jugador.gd" type="Script" id=2]
[ext_resource path="res://SISTEMA/ENTES/MEF_jugador.gd" type="Script" id=3]
[ext_resource path="res://RECURSOS/IMAGENES/PLAYER/HojaSpriteDelPersonaje.png" type="Texture" id=4]
[ext_resource path="res://SISTEMA/GLOBAL/RESOURCES/shadermaterial_difumunar_sprite_por_textura.tres" type="Material" id=5]
[ext_resource path="res://RECURSOS/IMAGENES/EFECTOS ESPECIALES/double-shockwave.png" type="Texture" id=6]
[ext_resource path="res://SISTEMA/EFECTOS/SacudirCamara.gd" type="Script" id=7]
[ext_resource path="res://SISTEMA/GLOBAL/AREAS/AreaDamage.tscn" type="PackedScene" id=8]
[ext_resource path="res://SISTEMA/GLOBAL/AREAS/AreaDamage.gd" type="Script" id=9]
[ext_resource path="res://SISTEMA/HABILIDADES/Habilidad_recoger_objetos(jugador).tscn" type="PackedScene" id=10]
[ext_resource path="res://RECURSOS/IMAGENES/EFECTOS ESPECIALES/Punsh/punsh.png" type="Texture" id=11]
[ext_resource path="res://RECURSOS/IMAGENES/EFECTOS ESPECIALES/Disparo Escopeta/disparo_escopeta.png" type="Texture" id=12]
[ext_resource path="res://RECURSOS/SHADERS/PixelArt1.tres" type="Material" id=13]
[ext_resource path="res://SISTEMA/HABILIDADES/Habilidad_modo_cinematica.tscn" type="PackedScene" id=14]

[sub_resource type="Animation" id=12]
resource_name = "count_energia"
length = 10.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("MEF:count_recuperar_energia")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, 0, 0, 0.25, 0, 20, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 10 )
}

[sub_resource type="RectangleShape2D" id=11]
resource_local_to_scene = true
extents = Vector2( 68, 25.5 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cuerpo/AreaDamageNormal:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cuerpo/AreaDamageEscopeta:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cuerpo/AreaDamageNormal:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 4 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Cuerpo/efecto_punsh:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Cuerpo/efecto_punsh:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Cuerpo/efecto_punsh:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Cuerpo/efecto_punsh:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Cuerpo/efecto_punsh:texture")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 11 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Cuerpo/Sprite:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Cuerpo/Sprite:material:shader_param/value")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Cuerpo/Sprite:texture")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 4 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Cuerpo/Sprite:hframes")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Cuerpo/Sprite:vframes")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 8 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Cuerpo/Sprite:modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Cuerpo/Sprite:frame_coords")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "atacar1"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.00784314, 0, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cuerpo/AreaDamageNormal:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cuerpo/AreaDamageNormal:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 4 ), Vector2( 25, -5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cuerpo/efecto_punsh:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.26, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Cuerpo/efecto_punsh:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1, -18 ), Vector2( 14, -12 ), Vector2( 20, -11 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Cuerpo/efecto_punsh:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.18, 0.47 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Cuerpo/efecto_punsh:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, -1 ), Vector2( 2, -2 ), Vector2( 3, -3 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Cuerpo/efecto_punsh:texture")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 11 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "atacar2"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.976471, 0.027451, 0.717647, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cuerpo/AreaDamageNormal:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cuerpo/AreaDamageNormal:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -2, 3 ), Vector2( 23, -2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cuerpo/efecto_punsh:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4, 4 ), Vector2( 9, -2 ), Vector2( 24, -9 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Cuerpo/efecto_punsh:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.25, 0.29 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Cuerpo/efecto_punsh:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.21 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ), Vector2( 3, 3 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Cuerpo/efecto_punsh:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.15, 0.21, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Cuerpo/efecto_punsh:texture")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 11 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "escopeta"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cuerpo/AreaDamageEscopeta:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cuerpo/efecto_punsh:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.55, 0.8, 0.85 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cuerpo/efecto_punsh:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 12 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Cuerpo/efecto_punsh:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.55, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.2, 0.2 ), Vector2( 0.6, 0.6 ), Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Cuerpo/efecto_punsh:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.55, 0.6, 0.65, 0.75, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4, 4 ), Vector2( 20, -2 ), Vector2( 38, -4 ), Vector2( 70, -1 ), Vector2( 104, -4 ), Vector2( 148, -3 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Cuerpo/efecto_punsh:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.65, 0.75, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=13]
resource_name = "muerte"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo/AreaDamageNormal:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cuerpo/AreaDamageEscopeta:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cuerpo/AreaDamageNormal:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cuerpo/efecto_punsh:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Cuerpo/efecto_punsh:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Cuerpo/efecto_punsh:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Cuerpo/efecto_punsh:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Cuerpo/efecto_punsh:texture")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 11 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Cuerpo/Sprite:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.4, 0.9 ),
"transitions": PoolRealArray( 0, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Cuerpo/Sprite:material:shader_param/value")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 0, 1 ),
"update": 0,
"values": [ 1.0, -0.077, 1.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Cuerpo/Sprite:texture")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 6 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Cuerpo/Sprite:hframes")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 1 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Cuerpo/Sprite:vframes")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 1 ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Cuerpo/Sprite:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/14/type = "method"
tracks/14/path = NodePath(".")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "JugadorMuere"
} ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Cuerpo/Sprite:frame_coords")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "quieto"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cuerpo/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cuerpo/efecto_punsh:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "CurvaDash"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:vector_impulsos:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 595.403, -0.25, 0, 0.5, -1, 0, 0, 648.903, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:vector_impulsos:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:vector_impulsos")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "SaltoSegundo"
length = 0.7
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:vector_impulsos:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"points": PoolRealArray( 595.403, -0.25, 0, 0.5, -1, 0, 0, 648.903, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:vector_impulsos:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.1, -8.58991, -52.282, -0.3, -2.77777, 0.4, 4.62962, -1.35612, -0.1, -0.777414, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.5 )
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:vector_impulsos")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "impulso_ataque"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:vector_impulsos")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 40, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "retroceso_escopeta"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:vector_impulsos")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.48, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -450, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Jugador" groups=["Persistentes"] instance=ExtResource( 1 )]
z_index = -2
collision_mask = 532
script = ExtResource( 2 )
max_energia = 100.0
energia = 100.0

[node name="MEF" parent="." index="0"]
script = ExtResource( 3 )
count_recuperar_energia = 0.0

[node name="anim_energia" type="AnimationPlayer" parent="MEF" index="0"]
root_node = NodePath("../..")
anims/count_energia = SubResource( 12 )

[node name="Sprite" type="Sprite" parent="Cuerpo" index="0"]
material = ExtResource( 5 )
texture = ExtResource( 4 )
hframes = 4
vframes = 8

[node name="AreaDamageNormal" parent="Cuerpo" index="1" instance=ExtResource( 8 )]
visible = false
position = Vector2( -1, 4 )
collision_mask = 34
monitoring = false

[node name="AreaDamageEscopeta" type="Area2D" parent="Cuerpo" index="2"]
visible = false
position = Vector2( 29, -2 )
collision_layer = 0
collision_mask = 34
input_pickable = false
monitoring = false
monitorable = false
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cuerpo/AreaDamageEscopeta" index="0"]
position = Vector2( 58, -0.5 )
shape = SubResource( 11 )

[node name="efecto_punsh" type="Sprite" parent="Cuerpo" index="3"]
modulate = Color( 1, 1, 1, 0 )
material = ExtResource( 13 )
z_index = 6
texture = ExtResource( 11 )
hframes = 4

[node name="AnimationPlayer" parent="." index="2"]
anims/RESET = SubResource( 10 )
anims/atacar1 = SubResource( 5 )
anims/atacar2 = SubResource( 6 )
anims/escopeta = SubResource( 9 )
anims/muerte = SubResource( 13 )
anims/quieto = SubResource( 4 )

[node name="AnimEfectos" type="AnimationPlayer" parent="." index="3"]
anims/CurvaDash = SubResource( 2 )
anims/SaltoSegundo = SubResource( 3 )
anims/impulso_ataque = SubResource( 7 )
anims/retroceso_escopeta = SubResource( 8 )

[node name="CollisionShape2D" parent="." index="5"]
visible = false
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="." index="6"]
position = Vector2( 1, -30 )
zoom = Vector2( 0.25, 0.25 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_speed = 8.0
drag_margin_left = 0.09
drag_margin_top = 0.84
drag_margin_right = 0.1
drag_margin_bottom = 0.48
editor_draw_drag_margin = true
script = ExtResource( 7 )

[node name="Label" type="Label" parent="." index="7"]
visible = false
margin_left = -18.0
margin_top = -32.0
margin_right = 22.0
margin_bottom = -18.0

[node name="RayPared1" type="RayCast2D" parent="." index="8"]
visible = false
self_modulate = Color( 0, 0.0627451, 1, 1 )
position = Vector2( 0, 15 )
enabled = true
cast_to = Vector2( 18, 0 )
collision_mask = 528

[node name="RayPared2" type="RayCast2D" parent="." index="9"]
visible = false
self_modulate = Color( 0, 0.0627451, 1, 1 )
position = Vector2( 0, 15 )
enabled = true
cast_to = Vector2( -18, 0 )
collision_mask = 528

[node name="RayPared3" type="RayCast2D" parent="." index="10"]
visible = false
self_modulate = Color( 0, 0.0627451, 1, 1 )
position = Vector2( 0, -15 )
enabled = true
cast_to = Vector2( 18, 0 )
collision_mask = 528

[node name="RayPared4" type="RayCast2D" parent="." index="11"]
visible = false
self_modulate = Color( 0, 0.0627451, 1, 1 )
position = Vector2( 0, -15 )
enabled = true
cast_to = Vector2( -18, 0 )
collision_mask = 528

[node name="HABILIDADES" type="Node" parent="." index="12"]

[node name="Habilidad_recoger_objetos(jugador)" parent="HABILIDADES" index="0" instance=ExtResource( 10 )]

[node name="Habilidad_modo_cinematica" parent="HABILIDADES" index="1" instance=ExtResource( 14 )]

[node name="Listener2D" type="Listener2D" parent="." index="13"]

[connection signal="tree_exiting" from="." to="." method="_on_Jugador_tree_exiting"]
[connection signal="area_entered" from="Cuerpo/AreaDamageEscopeta" to="Cuerpo/AreaDamageEscopeta" method="_on_AreaDamage_area_entered"]
[connection signal="body_entered" from="Cuerpo/AreaDamageEscopeta" to="Cuerpo/AreaDamageEscopeta" method="_on_AreaDamage_body_entered"]
